# Shop-Django-App

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/mysite/: settings.py
