[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["solo <qwastro322@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.5"
djangorestframework = "^3.14.0"
django-filter = "^23.2"
django-debug-toolbar = "^4.2.0"
pillow = "^10.0.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
